--- a/src/packages/admin-ui-components/src/welcome-page/styles.module.css
+++ b/src/packages/admin-ui-components/src/welcome-page/styles.module.css
@@ -1,6 +1,6 @@
 .wrapper {
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 	display: flex;
 	flex-direction: row;
 }
